# ChatKit-client

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  clang-format.cmake  cppcheck.cmake
src/: CMakeLists.txt  MainApplication.cc  MainApplication.h  injector.cc  injector.h  main-window.cc  main-window.h  main.cc  main.cpp
src/controller/: ClientController.cpp  ClientController.h  ViewFactory.cpp  ViewFactory.h  addfriend-observer.cc  addfriend-observer.h  client-controller.cc  client-controller.h  deletefriend-observer.cc  deletefriend-observer.h  observer.h  view-factory.cc  view-factory.h
src/controller/networking/: network-receiver.cc  network-receiver.h
src/controller/networking/callbacks/: callback-collection.h  error-callback.cc  error-callback.h  read-callback.cc  read-callback.h
src/controller/observers/: addfriend-observer.cc  addfriend-observer.h  deletefriend-observer.cc  deletefriend-observer.h  observer.h  send-message-observer.cc  send-message-observer.h
src/model/: client-model.cc  client-model.h  data-model.cc  data-model.h  injector.cc  injector.h  network-model.cc  network-model.h
src/model/friend-functionality/: friend-api.cc  friend-api.h  friend-hashmap.cc  friend-hashmap.h  friend-list.h  friend-node.cc  friend-node.h  friend-utility.cc  friend-utility.h
src/model/message-functionality/: client-stream-in-factory.cc  client-stream-in-factory.h  client-stream-in.h  client-stream-out-factory.cc  client-stream-out-factory.h  message-node.cc  message-node.h  message.h  network-stream-in-factory.cc  network-stream-in-factory.h  network-stream-out-factory.cc  network-stream-out-factory.h  server-stream-in-factory.h  server-stream-out-factory.h
src/model/message-functionality/client-stream-in/: connect-command.cc  connect-command.h  connected-message.cc  connected-message.h  disconnect-message.cc  disconnect-message.h  disconnected-command.cc  disconnected-command.h  error-command.cc  error-command.h  global-message-command.cc  global-message-command.h  send-global-message.cc  send-global-message.h  send-message.cc  send-message.h  update-command.cc  update-command.h  update-message.cc  update-message.h  user-message-command.cc  user-message-command.h
src/model/message-functionality/client-stream-out/: connect-message.cc  connect-message.h  disconnect-command.cc  disconnect-command.h  disconnected-message.cc  disconnected-message.h  error-message.cc  error-message.h  global-message.cc  global-message.h  send-global-message-command.cc  send-global-message-command.h  send-message-command.cc  send-message-command.h  update-command.cc  update-command.h  update-message.cc  update-message.h  user-message.cc  user-message.h
src/model/message-functionality/general/: invalid-command.cc  invalid-command.h
src/model/message-functionality/network-stream-in/: connecting-command.cc  connecting-command.h  got-info-command.cc  got-info-command.h  key-command.cc  key-command.h  request-command.cc  request-command.h
src/model/message-functionality/network-stream-out/: connect-command.cc  connect-command.h  encrypt-command.cc  encrypt-command.h  info-command.cc  info-command.h
src/model/networking/: client-connection.cc  client-connection.h  connection-factory.cc  connection-factory.h  connection.cc  connection.h  network-manager.cc  network-manager.h  network-sender.cc  network-sender.h  network-thread-manager.cc  network-thread-manager.h  server-connection.cc  server-connection.h
src/model/networking/connection/: client-connection.cc  client-connection.h  connection-factory.cc  connection-factory.h  connection.cc  connection.h  injector.cc  injector.h  server-connection.cc  server-connection.h
src/model/networking/messages/: message.cc  message.h
src/model/networking/server/: server-connection.cc  server-connection.h
src/model/networking/utility/: aes-gcm.cc  aes-gcm.h  base64.cc  base64.h  buffer-reader.cc  buffer-reader.h  buffer-writer.cc  buffer-writer.h  crypto-types.h  data-handler.h  data.h  decode.cc  decode.h  derived-data.h  (+21 more)
src/model/server-functionality/: friend-hashmap.h  friend-node.cc  friend-node.h  friend-utility.h  server-api.h  server-hashmap.cc  server-hashmap.h  server-list.h  server-node.cc  server-node.h  server-utility.cc  server-utility.h
src/resources/: ChatKit-client-ui.cmb  mickyb18-chat-client.glade
src/view/: GuiView.cpp  GuiView.h  MainApplication.cc  MainApplication.h  View.h  application-injector.cc  application-injector.h  gui-view.cc  gui-view.h  home.ui  injector.cc  injector.h  login.ui  main.ui  panel_style.css  view.h
src/view-model/: account-view-model.cc  account-view-model.h  injector.cc  injector.h  network-view-model.cc  network-view-model.h
src/view/common/: ui-util.cc  ui-util.h
src/view/home/: home-application-window.cc  home-application-window.h
src/view/login/: login-application-window.cc  login-application-window.h
src/view/main/: main-application-window.cc  main-application-window.h
src/view/observers/: server-observables.cc  server-observables.h
src/view/res/: ChatKit-client-ui.cmb  add_friend.ui  add_server.ui  direct_message.ui  friend_list.ui  friend_profile_card.ui  homepage.ui  login.ui  main.ui  panel_style.css  profile_card.ui  server_list.ui  server_profile_card.ui
src/view/style/: font-sizes.h  formats.h  string-modifiers.cc  string-modifiers.h
test/: CMakeLists.txt
test/controller/networking/: network-receiver_test.cc
test/fake-connections/: test-client.py  test-connection.py  test-server.py
test/model/: client-model_test.cc
test/model/friend-functionality/: friend-hashmap_test.cc  friend-node_test.cc  friend-utility_test.cc
test/model/message-functionality/: client-stream-in-factory_test.cc  client-stream-out-factory_test.cc  message-node_test.cc  network-stream-in-factory_test.cc  network-stream-out-factory_test.cc
test/model/networking/: temporary-client.cc  temporary-client.h  temporary-server.cc  temporary-server.h
test/model/server-functionality/: server-hashmap_test.cc  server-node_test.cc  server-utility_test.cc
(+219 files in other folders)
